--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="description_load_wikipedia_data">Load quiz data from Wikipedia. Once this data has been downloaded, quizzes can be played offline.</string>
     <string name="bluetooth_host_descrip">Host a new multiplayer quiz session.</string>
     <string name="bluetooth_join_descrip">Search for host sessions to join.</string>
+    <string name="review_screen_descrip">Scroll through the loaded database to prepare for your next quiz!</string>
 </resources>
